@@ -7,15 +7,26 @@
  */
 package io.camunda.optimize.service.db.es.writer;
 
+import static co.elastic.clients.elasticsearch._types.Result.Created;
+import static co.elastic.clients.elasticsearch._types.Result.Deleted;
+import static co.elastic.clients.elasticsearch._types.Result.NoOp;
+import static co.elastic.clients.elasticsearch._types.Result.NotFound;
 import static io.camunda.optimize.service.db.DatabaseConstants.COLLECTION_INDEX_NAME;
 import static io.camunda.optimize.service.db.DatabaseConstants.NUMBER_OF_RETRIES_ON_CONFLICT;
 import static io.camunda.optimize.service.db.es.writer.ElasticsearchWriterUtil.createDefaultScriptWithSpecificDtoParams;
 import static io.camunda.optimize.service.db.schema.index.CollectionIndex.DATA;
 import static io.camunda.optimize.service.db.schema.index.CollectionIndex.SCOPE;
-import static org.elasticsearch.action.support.WriteRequest.RefreshPolicy.IMMEDIATE;
-import static org.elasticsearch.index.query.QueryBuilders.nestedQuery;
-import static org.elasticsearch.index.query.QueryBuilders.termQuery;
 
+import co.elastic.clients.elasticsearch._types.ElasticsearchException;
+import co.elastic.clients.elasticsearch._types.Refresh;
+import co.elastic.clients.elasticsearch._types.Script;
+import co.elastic.clients.elasticsearch._types.ScriptLanguage;
+import co.elastic.clients.elasticsearch._types.query_dsl.ChildScoreMode;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.elasticsearch.core.DeleteResponse;
+import co.elastic.clients.elasticsearch.core.IndexResponse;
+import co.elastic.clients.elasticsearch.core.UpdateResponse;
+import co.elastic.clients.json.JsonData;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.camunda.optimize.dto.optimize.RoleType;
 import io.camunda.optimize.dto.optimize.query.collection.CollectionDefinitionDto;
@@ -24,65 +35,67 @@ import io.camunda.optimize.dto.optimize.query.collection.CollectionRoleRequestDt
 import io.camunda.optimize.dto.optimize.query.collection.CollectionRoleUpdateRequestDto;
 import io.camunda.optimize.dto.optimize.query.collection.CollectionScopeEntryDto;
 import io.camunda.optimize.dto.optimize.query.collection.CollectionScopeEntryUpdateDto;
+import io.camunda.optimize.rest.exceptions.NotFoundException;
 import io.camunda.optimize.service.db.es.OptimizeElasticsearchClient;
+import io.camunda.optimize.service.db.es.builders.OptimizeDeleteRequestBuilderES;
+import io.camunda.optimize.service.db.es.builders.OptimizeIndexRequestBuilderES;
+import io.camunda.optimize.service.db.es.builders.OptimizeUpdateRequestBuilderES;
+import io.camunda.optimize.service.db.repository.es.TaskRepositoryES;
 import io.camunda.optimize.service.db.writer.CollectionWriter;
 import io.camunda.optimize.service.exceptions.OptimizeRuntimeException;
 import io.camunda.optimize.service.exceptions.conflict.OptimizeCollectionConflictException;
 import io.camunda.optimize.service.exceptions.conflict.OptimizeConflictException;
 import io.camunda.optimize.service.security.util.LocalDateUtil;
 import io.camunda.optimize.service.util.configuration.condition.ElasticSearchCondition;
-import jakarta.ws.rs.NotFoundException;
 import java.io.IOException;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import lombok.AllArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.lucene.search.join.ScoreMode;
-import org.elasticsearch.ElasticsearchStatusException;
-import org.elasticsearch.action.DocWriteResponse;
-import org.elasticsearch.action.delete.DeleteRequest;
-import org.elasticsearch.action.delete.DeleteResponse;
-import org.elasticsearch.action.index.IndexRequest;
-import org.elasticsearch.action.index.IndexResponse;
-import org.elasticsearch.action.update.UpdateRequest;
-import org.elasticsearch.action.update.UpdateResponse;
-import org.elasticsearch.index.query.NestedQueryBuilder;
-import org.elasticsearch.script.Script;
-import org.elasticsearch.script.ScriptType;
-import org.elasticsearch.xcontent.XContentType;
+import org.slf4j.Logger;
 import org.springframework.context.annotation.Conditional;
 import org.springframework.stereotype.Component;
 
-@AllArgsConstructor
 @Component
-@Slf4j
 @Conditional(ElasticSearchCondition.class)
 public class CollectionWriterES implements CollectionWriter {
 
+  private static final Logger LOG = org.slf4j.LoggerFactory.getLogger(CollectionWriterES.class);
   private final OptimizeElasticsearchClient esClient;
   private final ObjectMapper objectMapper;
   private final DateTimeFormatter formatter;
+  private final TaskRepositoryES taskRepositoryES;
+
+  public CollectionWriterES(
+      final OptimizeElasticsearchClient esClient,
+      final ObjectMapper objectMapper,
+      final DateTimeFormatter formatter,
+      final TaskRepositoryES taskRepositoryES) {
+    this.esClient = esClient;
+    this.objectMapper = objectMapper;
+    this.formatter = formatter;
+    this.taskRepositoryES = taskRepositoryES;
+  }
 
   @Override
   public void updateCollection(final CollectionDefinitionUpdateDto collection, final String id) {
-    log.debug("Updating collection with id [{}] in Elasticsearch", id);
+    LOG.debug("Updating collection with id [{}] in Elasticsearch", id);
 
     try {
-      final UpdateRequest request =
-          new UpdateRequest()
-              .index(COLLECTION_INDEX_NAME)
-              .id(id)
-              .doc(objectMapper.writeValueAsString(collection), XContentType.JSON)
-              .setRefreshPolicy(IMMEDIATE)
-              .retryOnConflict(NUMBER_OF_RETRIES_ON_CONFLICT);
+      final UpdateResponse<CollectionDefinitionUpdateDto> updateResponse =
+          esClient.update(
+              new OptimizeUpdateRequestBuilderES<
+                      CollectionDefinitionUpdateDto, CollectionDefinitionUpdateDto>()
+                  .optimizeIndex(esClient, COLLECTION_INDEX_NAME)
+                  .id(id)
+                  .doc(collection)
+                  .refresh(Refresh.True)
+                  .retryOnConflict(NUMBER_OF_RETRIES_ON_CONFLICT)
+                  .build(),
+              CollectionDefinitionUpdateDto.class);
 
-      final UpdateResponse updateResponse = esClient.update(request);
-
-      if (updateResponse.getShardInfo().getFailed() > 0) {
-        log.error(
+      if (!updateResponse.shards().failures().isEmpty()) {
+        LOG.error(
             "Was not able to update collection with id [{}] and name [{}].",
             id,
             collection.getName());
@@ -93,41 +106,44 @@ public class CollectionWriterES implements CollectionWriter {
           String.format(
               "Was not able to update collection with id [%s] and name [%s].",
               id, collection.getName());
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new OptimizeRuntimeException(errorMessage, e);
-    } catch (final ElasticsearchStatusException e) {
+    } catch (final ElasticsearchException e) {
       final String errorMessage =
           String.format(
               "Was not able to update collection with id [%s] and name [%s]. Collection does not exist!",
               id, collection.getName());
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new NotFoundException(errorMessage, e);
     }
   }
 
   @Override
   public void deleteCollection(final String collectionId) {
-    log.debug("Deleting collection with id [{}]", collectionId);
-    final DeleteRequest request =
-        new DeleteRequest(COLLECTION_INDEX_NAME).id(collectionId).setRefreshPolicy(IMMEDIATE);
-
+    LOG.debug("Deleting collection with id [{}]", collectionId);
     final DeleteResponse deleteResponse;
     try {
-      deleteResponse = esClient.delete(request);
+      deleteResponse =
+          esClient.delete(
+              OptimizeDeleteRequestBuilderES.of(
+                  d ->
+                      d.optimizeIndex(esClient, COLLECTION_INDEX_NAME)
+                          .id(collectionId)
+                          .refresh(Refresh.True)));
     } catch (final IOException e) {
       final String reason =
           String.format("Could not delete collection with id [%s]. ", collectionId);
-      log.error(reason, e);
+      LOG.error(reason, e);
       throw new OptimizeRuntimeException(reason, e);
     }
 
-    if (!deleteResponse.getResult().equals(DocWriteResponse.Result.DELETED)) {
+    if (!deleteResponse.result().equals(Deleted)) {
       final String message =
           String.format(
               "Could not delete collection with id [%s]. Collection does not exist. "
                   + "Maybe it was already deleted by someone else?",
               collectionId);
-      log.error(message);
+      LOG.error(message);
       throw new NotFoundException(message);
     }
   }
@@ -143,26 +159,26 @@ public class CollectionWriterES implements CollectionWriter {
       params.put("lastModifier", userId);
       params.put("lastModified", formatter.format(LocalDateUtil.getCurrentDateTime()));
       final Script updateEntityScript =
-          createDefaultScriptWithSpecificDtoParams(UPDATE_ENTITY_SCRIPT_CODE, params, objectMapper);
+          createDefaultScriptWithSpecificDtoParams(UPDATE_ENTITY_SCRIPT_CODE, params);
 
-      final UpdateResponse updateResponse;
+      final UpdateResponse<?> updateResponse;
       updateResponse =
           executeUpdateRequest(
               collectionId, updateEntityScript, "Was not able to update collection with id [%s].");
 
-      if (updateResponse.getResult().equals(DocWriteResponse.Result.NOT_FOUND)) {
+      if (updateResponse.result().equals(NotFound)) {
         final String message =
             String.format(
                 "Was not able to add scope entries to collection with id [%s]. Collection does not exist!",
                 collectionId);
-        log.error(message);
+        LOG.error(message);
         throw new NotFoundException(message);
       }
     } catch (final IOException e) {
       final String errorMessage =
           String.format(
               "Wasn't able to add scope entries to collection with id [%s].", collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new OptimizeRuntimeException(errorMessage, e);
     }
   }
@@ -170,28 +186,47 @@ public class CollectionWriterES implements CollectionWriter {
   @Override
   public void deleteScopeEntryFromAllCollections(final String scopeEntryId) {
     final String updateItem = String.format("collection scope entry with ID [%s].", scopeEntryId);
-    log.info("Removing {} from all collections.", updateItem);
+    LOG.info("Removing {} from all collections.", updateItem);
 
     final Script removeScopeEntryFromCollectionsScript =
-        new Script(
-            ScriptType.INLINE,
-            Script.DEFAULT_SCRIPT_LANG,
-            REMOVE_SCOPE_ENTRY_FROM_COLLECTION_SCRIPT_CODE,
-            Collections.singletonMap("scopeEntryIdToRemove", scopeEntryId));
+        Script.of(
+            s ->
+                s.inline(
+                    i ->
+                        i.lang(ScriptLanguage.Painless)
+                            .params(Map.of("scopeEntryIdToRemove", JsonData.of(scopeEntryId)))
+                            .source(REMOVE_SCOPE_ENTRY_FROM_COLLECTION_SCRIPT_CODE)));
 
-    final NestedQueryBuilder query =
-        nestedQuery(
-            DATA,
-            nestedQuery(
-                String.join(".", DATA, SCOPE),
-                termQuery(
-                    String.join(".", DATA, SCOPE, CollectionScopeEntryDto.Fields.id.name()),
-                    scopeEntryId),
-                ScoreMode.None),
-            ScoreMode.None);
+    final Query query =
+        Query.of(
+            q ->
+                q.nested(
+                    n ->
+                        n.path(DATA)
+                            .scoreMode(ChildScoreMode.None)
+                            .query(
+                                Query.of(
+                                    qq ->
+                                        qq.nested(
+                                            nn ->
+                                                nn.path(String.join(".", DATA, SCOPE))
+                                                    .scoreMode(ChildScoreMode.None)
+                                                    .query(
+                                                        qqq ->
+                                                            qqq.term(
+                                                                t ->
+                                                                    t.field(
+                                                                            String.join(
+                                                                                ".",
+                                                                                DATA,
+                                                                                SCOPE,
+                                                                                CollectionScopeEntryDto
+                                                                                    .Fields.id
+                                                                                    .name()))
+                                                                        .value(scopeEntryId))))))));
 
-    ElasticsearchWriterUtil.tryUpdateByQueryRequest(
-        esClient, updateItem, removeScopeEntryFromCollectionsScript, query, COLLECTION_INDEX_NAME);
+    taskRepositoryES.tryUpdateByQueryRequest(
+        updateItem, removeScopeEntryFromCollectionsScript, query, COLLECTION_INDEX_NAME);
   }
 
   @Override
@@ -208,8 +243,7 @@ public class CollectionWriterES implements CollectionWriter {
       params.put("lastModified", formatter.format(LocalDateUtil.getCurrentDateTime()));
 
       final Script updateEntityScript =
-          createDefaultScriptWithSpecificDtoParams(
-              UPDATE_SCOPE_ENTITY_SCRIPT_CODE, params, objectMapper);
+          createDefaultScriptWithSpecificDtoParams(UPDATE_SCOPE_ENTITY_SCRIPT_CODE, params);
 
       executeUpdateRequest(
           collectionId, updateEntityScript, "Was not able to update collection with id [%s].");
@@ -217,15 +251,15 @@ public class CollectionWriterES implements CollectionWriter {
     } catch (final IOException e) {
       final String errorMessage =
           String.format("Was not able to update collection with id [%s].", collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new OptimizeRuntimeException(errorMessage, e);
-    } catch (final ElasticsearchStatusException e) {
+    } catch (final ElasticsearchException e) {
       final String errorMessage =
           String.format(
               "Was not able to update scope entry with id [%s] on collection with id [%s]."
                   + " Collection or scope Entry does not exist!",
               scopeEntryId, collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new NotFoundException(errorMessage, e);
     }
   }
@@ -250,7 +284,7 @@ public class CollectionWriterES implements CollectionWriter {
           String.format(
               "The scope with ids %s could not be removed from the collection %s.",
               scopeEntryIds, collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new OptimizeRuntimeException(errorMessage, e);
     }
   }
@@ -273,17 +307,17 @@ public class CollectionWriterES implements CollectionWriter {
           executeUpdateRequest(
               collectionId, updateEntityScript, "Was not able to update collection with id [%s].");
 
-      if (updateResponse.getResult().equals(DocWriteResponse.Result.NOOP)) {
+      if (updateResponse.result().equals(NoOp)) {
         final String message =
             String.format("Scope entry for id [%s] doesn't exist.", scopeEntryId);
-        log.warn(message);
+        LOG.warn(message);
         throw new NotFoundException(message);
       }
 
     } catch (final IOException e) {
       final String errorMessage =
           String.format("Was not able to update collection with id [%s].", collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new OptimizeRuntimeException(errorMessage, e);
     }
   }
@@ -293,7 +327,7 @@ public class CollectionWriterES implements CollectionWriter {
       final String collectionId,
       final List<CollectionRoleRequestDto> rolesToAdd,
       final String userId) {
-    log.debug(
+    LOG.debug(
         "Adding roles {} to collection with id [{}] in Elasticsearch.", rolesToAdd, collectionId);
 
     try {
@@ -303,31 +337,30 @@ public class CollectionWriterES implements CollectionWriter {
       params.put("lastModified", formatter.format(LocalDateUtil.getCurrentDateTime()));
 
       final Script addEntityScript =
-          createDefaultScriptWithSpecificDtoParams(
-              ADD_ROLE_TO_COLLECTION_SCRIPT_CODE, params, objectMapper);
+          createDefaultScriptWithSpecificDtoParams(ADD_ROLE_TO_COLLECTION_SCRIPT_CODE, params);
 
-      final UpdateResponse updateResponse =
+      final UpdateResponse<?> updateResponse =
           executeUpdateRequest(
               collectionId, addEntityScript, "Was not able to update collection with id [%s].");
 
-      if (updateResponse.getResult().equals(DocWriteResponse.Result.NOOP)) {
+      if (updateResponse.result().equals(NoOp)) {
         final String message =
             String.format(
                 "One of the roles %s already exists in collection [%s].", rolesToAdd, collectionId);
-        log.warn(message);
+        LOG.warn(message);
         throw new OptimizeCollectionConflictException(message);
       }
     } catch (final IOException e) {
       final String errorMessage =
           String.format("Was not able to update collection with id [%s].", collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new OptimizeRuntimeException(errorMessage, e);
-    } catch (final ElasticsearchStatusException e) {
+    } catch (final ElasticsearchException e) {
       final String errorMessage =
           String.format(
               "Was not able to update collection with id [%s]. Collection does not exist!",
               collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new NotFoundException(errorMessage, e);
     }
   }
@@ -339,42 +372,42 @@ public class CollectionWriterES implements CollectionWriter {
       final CollectionRoleUpdateRequestDto roleUpdateDto,
       final String userId)
       throws OptimizeConflictException {
-    log.debug(
+    LOG.debug(
         "Updating the role [{}] in collection with id [{}] in Elasticsearch.",
         roleEntryId,
         collectionId);
 
     try {
-      final Map<String, Object> params = constructParamsForRoleUpdateScript(roleEntryId, userId);
+      final Map<String, String> params = constructParamsForRoleUpdateScript(roleEntryId, userId);
       params.put("role", roleUpdateDto.getRole().toString());
 
       final Script addEntityScript =
           ElasticsearchWriterUtil.createDefaultScriptWithPrimitiveParams(
               UPDATE_ROLE_IN_COLLECTION_SCRIPT_CODE, params);
 
-      final UpdateResponse updateResponse =
+      final UpdateResponse<?> updateResponse =
           executeUpdateRequest(
               collectionId, addEntityScript, "Was not able to update collection with id [%s].");
 
-      if (updateResponse.getResult().equals(DocWriteResponse.Result.NOOP)) {
+      if (updateResponse.result().equals(NoOp)) {
         final String message =
             String.format(
                 "Cannot assign lower privileged role to last [%s] of collection [%s].",
                 RoleType.MANAGER, collectionId);
-        log.warn(message);
+        LOG.warn(message);
         throw new OptimizeCollectionConflictException(message);
       }
     } catch (final IOException e) {
       final String errorMessage =
           String.format("Was not able to update collection with id [%s].", collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new OptimizeRuntimeException(errorMessage, e);
-    } catch (final ElasticsearchStatusException e) {
+    } catch (final ElasticsearchException e) {
       final String errorMessage =
           String.format(
               "Was not able to update role with id [%s] on collection with id [%s]. Collection or role does not exist!",
               roleEntryId, collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new NotFoundException(errorMessage, e);
     }
   }
@@ -383,7 +416,7 @@ public class CollectionWriterES implements CollectionWriter {
   public void removeRoleFromCollectionUnlessIsLastManager(
       final String collectionId, final String roleEntryId, final String userId)
       throws OptimizeConflictException {
-    final Map<String, Object> params = constructParamsForRoleUpdateScript(roleEntryId, userId);
+    final Map<String, String> params = constructParamsForRoleUpdateScript(roleEntryId, userId);
     removeRoleFromCollectionUnlessIsLastManager(collectionId, roleEntryId, params);
   }
 
@@ -391,53 +424,56 @@ public class CollectionWriterES implements CollectionWriter {
   public void persistCollection(
       final String id, final CollectionDefinitionDto collectionDefinitionDto) {
     try {
-      final IndexRequest request =
-          new IndexRequest(COLLECTION_INDEX_NAME)
-              .id(id)
-              .source(objectMapper.writeValueAsString(collectionDefinitionDto), XContentType.JSON)
-              .setRefreshPolicy(IMMEDIATE);
+      final IndexResponse indexResponse =
+          esClient.index(
+              OptimizeIndexRequestBuilderES.of(
+                  i ->
+                      i.optimizeIndex(esClient, COLLECTION_INDEX_NAME)
+                          .id(id)
+                          .document(collectionDefinitionDto)
+                          .refresh(Refresh.True)));
 
-      final IndexResponse indexResponse = esClient.index(request);
-
-      if (!indexResponse.getResult().equals(DocWriteResponse.Result.CREATED)) {
+      if (!indexResponse.result().equals(Created)) {
         final String message = "Could not write collection to Elasticsearch. ";
-        log.error(message);
+        LOG.error(message);
         throw new OptimizeRuntimeException(message);
       }
     } catch (final IOException e) {
       final String errorMessage = "Could not create collection.";
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new OptimizeRuntimeException(errorMessage, e);
     }
 
-    log.debug("Collection with id [{}] has successfully been created.", id);
+    LOG.debug("Collection with id [{}] has successfully been created.", id);
   }
 
-  private UpdateResponse executeUpdateRequest(
+  private UpdateResponse<?> executeUpdateRequest(
       final String collectionId, final Script updateEntityScript, final String errorMessage)
       throws IOException {
-    final UpdateRequest request =
-        new UpdateRequest()
-            .index(COLLECTION_INDEX_NAME)
-            .id(collectionId)
-            .script(updateEntityScript)
-            .setRefreshPolicy(IMMEDIATE)
-            .retryOnConflict(NUMBER_OF_RETRIES_ON_CONFLICT);
 
-    final UpdateResponse updateResponse = esClient.update(request);
+    final UpdateResponse<?> updateResponse =
+        esClient.update(
+            new OptimizeUpdateRequestBuilderES<>()
+                .optimizeIndex(esClient, COLLECTION_INDEX_NAME)
+                .id(collectionId)
+                .script(updateEntityScript)
+                .refresh(Refresh.True)
+                .retryOnConflict(NUMBER_OF_RETRIES_ON_CONFLICT)
+                .build(),
+            Object.class);
 
-    if (updateResponse.getShardInfo().getFailed() > 0) {
+    if (!updateResponse.shards().failures().isEmpty()) {
       final String message = String.format(errorMessage, collectionId);
-      log.error(message, collectionId);
+      LOG.error(message, collectionId);
       throw new OptimizeRuntimeException(message);
     }
     return updateResponse;
   }
 
   private void removeRoleFromCollectionUnlessIsLastManager(
-      final String collectionId, final String roleEntryId, final Map<String, Object> params)
+      final String collectionId, final String roleEntryId, final Map<String, String> params)
       throws OptimizeConflictException {
-    log.debug(
+    LOG.debug(
         "Deleting the role [{}] in collection with id [{}] in Elasticsearch.",
         roleEntryId,
         collectionId);
@@ -446,37 +482,37 @@ public class CollectionWriterES implements CollectionWriter {
           ElasticsearchWriterUtil.createDefaultScriptWithPrimitiveParams(
               REMOVE_ROLE_FROM_COLLECTION_UNLESS_IS_LAST_MANAGER, params);
 
-      final UpdateResponse updateResponse =
+      final UpdateResponse<?> updateResponse =
           executeUpdateRequest(
               collectionId,
               addEntityScript,
               "Was not able to delete role from collection with id [%s].");
 
-      if (updateResponse.getResult() == DocWriteResponse.Result.NOOP) {
+      if (updateResponse.result() == NoOp) {
         final String message =
             String.format(
                 "Cannot delete last [%s] of collection [%s].", RoleType.MANAGER, collectionId);
-        log.warn(message);
+        LOG.warn(message);
         throw new OptimizeCollectionConflictException(message);
       }
     } catch (final IOException e) {
       final String errorMessage =
           String.format("Was not able to update collection with id [%s].", collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new OptimizeRuntimeException(errorMessage, e);
-    } catch (final ElasticsearchStatusException e) {
+    } catch (final ElasticsearchException e) {
       final String errorMessage =
           String.format(
               "Was not able to update role with id [%s] on collection with id [%s]. Collection or role does not exist!",
               roleEntryId, collectionId);
-      log.error(errorMessage, e);
+      LOG.error(errorMessage, e);
       throw new NotFoundException(errorMessage, e);
     }
   }
 
-  private Map<String, Object> constructParamsForRoleUpdateScript(
+  private Map<String, String> constructParamsForRoleUpdateScript(
       final String roleEntryId, final String userId) {
-    final Map<String, Object> params = new HashMap<>();
+    final Map<String, String> params = new HashMap<>();
     params.put("roleEntryId", roleEntryId);
     params.put("managerRole", RoleType.MANAGER.toString());
     if (userId != null) {
