@@ -9,13 +9,15 @@ package io.camunda.zeebe.it.util;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import io.camunda.zeebe.client.ZeebeClient;
-import io.camunda.zeebe.client.api.response.DeploymentEvent;
-import io.camunda.zeebe.client.api.response.PartitionInfo;
-import io.camunda.zeebe.client.api.response.Topology;
+import io.camunda.client.CamundaClient;
+import io.camunda.client.api.command.DeployResourceCommandStep1;
+import io.camunda.client.api.response.DeploymentEvent;
+import io.camunda.client.api.response.PartitionInfo;
+import io.camunda.client.api.response.Topology;
 import io.camunda.zeebe.model.bpmn.Bpmn;
 import io.camunda.zeebe.model.bpmn.BpmnModelInstance;
 import io.camunda.zeebe.model.bpmn.builder.ServiceTaskBuilder;
+import io.camunda.zeebe.model.bpmn.builder.UserTaskBuilder;
 import io.camunda.zeebe.protocol.record.Record;
 import io.camunda.zeebe.protocol.record.intent.CommandDistributionIntent;
 import io.camunda.zeebe.protocol.record.intent.DeploymentIntent;
@@ -26,15 +28,16 @@ import io.camunda.zeebe.util.CloseableSilently;
 import java.time.Duration;
 import java.util.List;
 import java.util.function.Consumer;
+import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.awaitility.Awaitility;
 
 public class ZeebeResourcesHelper implements CloseableSilently {
 
-  private final ZeebeClient client;
+  private final CamundaClient client;
 
-  public ZeebeResourcesHelper(final ZeebeClient client) {
+  public ZeebeResourcesHelper(final CamundaClient client) {
     this.client = client;
   }
 
@@ -134,20 +137,33 @@ public class ZeebeResourcesHelper implements CloseableSilently {
         .done();
   }
 
+  public long deployProcess(final BpmnModelInstance modelInstance, final boolean useRest) {
+    return deployProcess(modelInstance, "", useRest);
+  }
+
   public long deployProcess(final BpmnModelInstance modelInstance) {
     return deployProcess(modelInstance, "");
   }
 
   public long deployProcess(final BpmnModelInstance modelInstance, final String tenantId) {
+    return deployProcess(modelInstance, tenantId, false);
+  }
+
+  public long deployProcess(
+      final BpmnModelInstance modelInstance, final String tenantId, final boolean useRest) {
     final DeploymentEvent deploymentEvent =
-        client
-            .newDeployResourceCommand()
+        getDeployCommand(useRest)
             .addProcessModel(modelInstance, "process.bpmn")
             .tenantId(tenantId)
             .send()
             .join();
     waitUntilDeploymentIsDone(deploymentEvent.getKey());
-    return deploymentEvent.getProcesses().get(0).getProcessDefinitionKey();
+    return deploymentEvent.getProcesses().getFirst().getProcessDefinitionKey();
+  }
+
+  private DeployResourceCommandStep1 getDeployCommand(final boolean useRest) {
+    final DeployResourceCommandStep1 deployResourceCommand = client.newDeployResourceCommand();
+    return useRest ? deployResourceCommand.useRest() : deployResourceCommand.useGrpc();
   }
 
   public long createProcessInstance(final long processDefinitionKey, final String variables) {
@@ -175,12 +191,21 @@ public class ZeebeResourcesHelper implements CloseableSilently {
         .getProcessInstanceKey();
   }
 
+  public long createSingleUserTask(final UnaryOperator<UserTaskBuilder> userTaskBuilderFunction) {
+    return createSingleUserTask("", userTaskBuilderFunction);
+  }
+
   public long createSingleUserTask() {
     return createSingleUserTask("");
   }
 
   public long createSingleUserTask(final String tenantId) {
-    final var modelInstance = createSingleUserTaskModelInstance();
+    return createSingleUserTask(tenantId, UnaryOperator.identity());
+  }
+
+  public long createSingleUserTask(
+      final String tenantId, final UnaryOperator<UserTaskBuilder> userTaskBuilderFunction) {
+    final var modelInstance = createSingleUserTaskModelInstance(userTaskBuilderFunction);
     final var processDefinitionKey = deployProcess(modelInstance, tenantId);
     final var processInstanceKey = createProcessInstance(processDefinitionKey, "{}", tenantId);
     final var userTaskKey =
@@ -195,10 +220,11 @@ public class ZeebeResourcesHelper implements CloseableSilently {
     return userTaskKey;
   }
 
-  public BpmnModelInstance createSingleUserTaskModelInstance() {
+  public BpmnModelInstance createSingleUserTaskModelInstance(
+      final UnaryOperator<UserTaskBuilder> userTaskBuilderFunction) {
     return Bpmn.createExecutableProcess("process")
         .startEvent("start")
-        .userTask("task")
+        .userTask("task", t -> userTaskBuilderFunction.apply(t.zeebeUserTask()))
         .zeebeUserTask()
         .endEvent("end")
         .done();
